[#21] fix alignment

--- a/src/objects/scss/admin/_admin_theme.scss
+++ b/src/objects/scss/admin/_admin_theme.scss
@@ -134,7 +134,7 @@ div.breadcrumbs {
 
 /* Footer */
 .version {
-  padding: 0 30px;
+  padding: 0 40px;
   color: $color-secondary-dark;
   font-size: smaller;
 
